# invera-challenge

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
task_tracker/: asgi.py  permissions.py  settings.py  test.py  urls.py
task_tracker/apps/tasks/: apps.py  factories.py  filters.py  models.py  serializers.py  urls.py  views.py
task_tracker/apps/tasks/migrations/: 0001_initial.py
task_tracker/apps/tasks/tests/: test_task_serializers.py  test_tasks.py  test_tasks_view.py
task_tracker/apps/users/: apps.py  factories.py  filters.py  serializers.py  urls.py  views.py
task_tracker/apps/users/management/commands/: seed_data.py
task_tracker/apps/users/tests/: test_authentication_view.py  test_users.py  test_users_view.py
task_tracker/scripts/: setup_env.py
